  os.waitpid and os.read system calls where appropriate.

- Issue #6729: Added ctypes.c_ssize_t to represent ssize_t.

- Issue #6247: The argparse module has been added to the standard library.

- Issue #8235: _socket: Add the constant ``SO_SETFIB``.  SO_SETFIB is
  a socket option available on FreeBSD 7.1 and newer.

Extension Modules
-----------------

- Issue #9165: Add new functions math.isfinite and cmath.isfinite, to
  accompany existing isinf and isnan functions.

- Issue #1578269: Implement os.symlink for Windows 6.0+. Patch by
  Jason R. Coombs

- In struct.pack, correctly propogate exceptions from computing the truth of an
  object in the '?' format.

- Issue #9000: datetime.timezone objects now have eval-friendly repr.

- In the math module, correctly lookup __trunc__, __ceil__, and __floor__ as
  special methods.

- Issue #9005: Prevent utctimetuple() from producing year 0 or year
  10,000.  Prior to this change, timezone adjustment in utctimetuple()
  could produce tm_year value of 0 or 10,000.  Now an OverflowError is
  raised in these edge cases.

- Issue #6641: The ``datetime.strptime`` method now supports the
  ``%z`` directive.  When the ``%z`` directive is present in the
  format string, an aware ``datetime`` object is returned with
  ``tzinfo`` bound to a ``datetime.timezone`` instance constructed
  from the parsed offset.  If both ``%z`` and ``%Z`` are present, the
  data in ``%Z`` field is used for timezone name, but ``%Z`` data
  without ``%z`` is discarded.

- Issue #5094: The ``datetime`` module now has a simple concrete class
  implementing ``datetime.tzinfo`` interface.  Instances of the new
  class, ``datetime.timezone``, return fixed name and UTC offset from
  their ``tzname(dt)`` and ``utcoffset(dt)`` methods.  The ``dst(dt)``
  method always returns ``None``.  A class attribute, ``utc`` contains
  an instance representing the UTC timezone.  Original patch by Rafe
  Kaplan.
