@@ -1429,6 +1429,9 @@ Library
 Extension Modules
 -----------------
 
+- Issue #5180: Fixed a bug that prevented loading 2.x pickles in 3.x
+  python when they contain instances of old-style classes.
+
 - Issue #9165: Add new functions math.isfinite and cmath.isfinite, to
   accompany existing isinf and isnan functions.
 
